# scribble-lang

./: .clangd  CMakeLists.txt  LANGUAGE-REFERENCE.md  LICENSE  README.md  test.scribble  test.txt
docs/: arithmetic.md  booleans.md  control_flow.md  functions.md  print.md  variables.md
examples/: arithmetic.scribble  booleans.scribble  constants.scribble  control_flow.scribble  functions.scribble  print.scribble  variables.scribble
src/: ast.h  ast_printer.cpp  ast_printer.h  file_utils.cpp  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  token_printer.cpp  token_printer.h
src/interpreter/: environment.cpp  environment.h  interpreter.cpp  interpreter.h
src/lexer/: lexer.cpp  lexer.h
src/parser/: ast.h  declaration_parser.cpp  expression_parser.cpp  parser.cpp  parser.h  statement_parser.cpp
src/utils/: ast_printer.cpp  error.h  error_reporter.cpp  error_reporter.h  token_printer.cpp  token_printer.h
